<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/myName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/myName"
        android:textColor="@color/iosGrey"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/developer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/myName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/developer"
        android:textColor="@color/iosGrey" />

    <TextView
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/myDescription"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/about"
        android:textColor="@color/iosGrey"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/myDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:text="@string/myDescription"
        android:textColor="@color/iosBlue"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/myPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/email"
        android:layout_below="@+id/email"
        android:layout_marginTop="10dp"
        android:text="@string/myPhone"
        android:textColor="@color/iosGrey" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/myContact"
        android:layout_below="@+id/myContact"
        android:layout_marginTop="15dp"
        android:text="@string/email"
        android:textColor="@color/iosGrey" />

    <TextView
        android:id="@+id/myContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/myName"
        android:layout_below="@+id/developer"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/myContact"
        android:textColor="@color/iosGrey" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/feedback"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/iosGrey"
        android:textSize="12sp" />

</RelativeLayout>
