<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/rdk"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/stopping_points_m"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginTop="7dp"
        android:text="@string/stopping_points_m"
        android:textColor="@color/list_of_station"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_alignLeft="@+id/stopping_points_m"
        android:layout_below="@+id/stopping_points_m"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/circle"
        android:src="@drawable/btn_radio_on_holo_light" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/imageView1"
        android:text="@string/avtovaz"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/ImageView02"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="3dp"
        android:layout_toLeftOf="@+id/textView2"
        android:contentDescription="@string/circle"
        android:src="@drawable/btn_radio_on_holo_light" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ImageView02"
        android:layout_alignLeft="@+id/textView2"
        android:text="@string/bsmp"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/ImageView03"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_below="@+id/ImageView02"
        android:layout_marginTop="3dp"
        android:layout_toLeftOf="@+id/textView2"
        android:contentDescription="@string/circle"
        android:src="@drawable/btn_radio_on_holo_light" />

    <ImageView
        android:id="@+id/ImageView04"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_alignLeft="@+id/ImageView03"
        android:layout_below="@+id/ImageView03"
        android:layout_marginTop="3dp"
        android:contentDescription="@string/circle"
        android:src="@drawable/btn_radio_on_holo_light" />

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ImageView03"
        android:layout_alignLeft="@+id/TextView01"
        android:text="@string/institut"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/TextView04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ImageView04"
        android:layout_alignLeft="@+id/TextView03"
        android:text="@string/jd"
        android:textSize="16sp" />

</RelativeLayout>
