<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mishonok"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ab_background_textured_gitaxi">

      <TextView
          android:id="@+id/passperevmishonok"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_alignParentTop="true"
          android:layout_centerHorizontal="true"
          android:layout_marginTop="30dp"
          android:gravity="center_horizontal"
          android:text="@string/passperevozki"
          android:textSize="18sp" />

    <TextView
        android:id="@+id/telMTCmishonok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passperevmishonok"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/telMTCmishonok"
        android:textSize="18sp" />
    
    <TextView
        android:id="@+id/telVELmishonok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/telMTCmishonok"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/telVelmishonok"
        android:textSize="18sp" />

    <Button
        android:id="@+id/cancelDialogmishonok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/telVELmishonok"
        android:layout_marginTop="30dp"
        android:text="@string/canceldialog" />

</RelativeLayout>
