<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativelay"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/owner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/time"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:maxLines="2"
        android:text="@string/owner"
        android:textColor="@android:color/black"
        android:textSize="14sp" >

    </TextView>

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:maxLines="1"
        android:text="@string/time"
        android:textSize="23sp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="20dp"
        android:layout_height="15dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="10dp"
        android:contentDescription="@string/arrow"
        android:src="@drawable/arrow" />

</RelativeLayout>